required msg alignment issue fixed

--- a/src/assets/scss/custom-styles.scss
+++ b/src/assets/scss/custom-styles.scss
@@ -143,6 +143,14 @@
   margin-bottom: 2px;
 }
 
+.error-exception-cft {
+  font-size: 12px;
+  color: $darkred;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 2px;
+}
+
 .signup-wrapper {
   display: grid;
   grid-template-columns: 1fr 1.5fr;
